--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Pyxrr</h1>
+        <h1>Pyxrr - v0.9.07</h1>
         <p>pyXRR - X-Ray Reflectivity calculation software</p>
 
-        <p class="view"><a href="https://github.com/carichte/pyxrr">View the Project on GitHub <small>carichte/pyxrr</small></a></p>
+        <p class="view"><a href="https://github.com/carichte/pyxrr/tree/v0.9.07">View the Project on GitHub <small>carichte/pyxrr</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/carichte/pyxrr/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/carichte/pyxrr/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/carichte/pyxrr">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/carichte/pyxrr/zipball/v0.9.07">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/carichte/pyxrr/tarball/v0.9.07">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/carichte/pyxrr/tree/v0.9.07">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
