different dl links

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 
         <ul>
-          <li><a href="https://github.com/carichte/pyxrr/zipball/v0.9.07">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/carichte/pyxrr/tarball/v0.9.07">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/carichte/pyxrr/archive/v0.9.07.zip">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/carichte/pyxrr/archive/v0.9.07.tar.gz">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/carichte/pyxrr/tree/v0.9.07">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
