--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+r<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -32,9 +32,8 @@
         <p>xrr - C Extension for Python and pyxrr - wrapper</p>
 
 <hr><p>Author:  Carsten Richter
-Contact: <a href="mailto:carsten.richter@desy.de">carsten.richter@desy.de</a>
-      or <a href="mailto:carsten.richter@physik.tu-freiberg.de">carsten.richter@physik.tu-freiberg.de</a>
-Website: <a href="http://desy.de/%7Ecrichter/">http://desy.de/~crichter/</a></p>
+Contact: <a href="mailto:carsten.richter@esrf.fr">carsten.richter@desy.de</a>
+      or <a href="mailto:carsten.richter@physik.tu-freiberg.de">carsten.richter@physik.tu-freiberg.de</a></p>
 
 <p><h3>Requirements:</h3>
 <ul>
